--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
-  <head><title>kuki0shinobu.github.io</title></head>
+  <head><title>kuki-shinobu.github.io</title></head>
   <body><p>hello</p></body>
 </html>
